2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicToggleButtonUI.java:
        (getPropertyPrefix): Added.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicButtonUI.java
        (getPropertyPrefix): Added.
        (installDefaults): Use getPropertyPrefix instead of hard-coded
        prefix.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Roman Kennke  <roman@kennke.org>

        * javax/swing/JToggleButton.java
        (JToggleButton): Removed horizontalAlignment setting, this
        was wrong. Added setting of an actionCommand, ToggleButtons
        have "" as default actionCommand.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  David Daney  <ddaney@avtrex.com>

        * java/net/InetAddress.java (InetAddress): Make a private copy of
        the address.
        * java/net/Inet4Address.java (getAddress): Return a copy of the
        address.
        * java/net/Inet6Address.java (Inet6Address): Use private copy of
        the address
        (getAddress): Return a copy of the address.
        (equals): Rewrote.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-26  Michael Koch  <konqueror@gmx.de>

        * javax/swing/ImageIcon.java:
        Merged copyright with GCJ.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-25  Mark Wielaard  <mark@klomp.org>

        * native/jni/java-nio/gnu_java_nio_charset_iconv_IconvDecoder.c:
        Include config.h and jcl.h, use if defined(HAVE_ICONV), add new
        static variables infid and outfid, add char_union.
        (Java_gnu_java_nio_charset_iconv_IconvDecoder_openIconv):